--- a/src/style/import/_variables.scss
+++ b/src/style/import/_variables.scss
@@ -1,6 +1,11 @@
+$font: "Helvetica Neue",
+Helvetica,
+Arial,
+sans-serif;
 $greyDark: #333333;
 $greyMedium: #444444;
 $greyLight: #999999;
+$greyWhite: #E0E0E0;
 $white: white;
 $pink: #ec5e95;
 $opacityGrey: rgba(51, 51, 51, 0.6);
