--- a/src/style/components/theme.scss
+++ b/src/style/components/theme.scss
@@ -1,3 +1,20 @@
+.white {
+    color: white;
+}
+
+.grey {
+    color: $greyLight;
+}
+
+.pink {
+    background: $pink;
+}
+
+.greyB {
+    background: $greyLight;
+}
+
+
 /*--------------------------------FONTS--------------------------*/
 
 body {
@@ -31,8 +48,18 @@ header {
         .dropdown-content {
             background: $opacityGrey;
             a {
-                color: $greyMedium;
+                color: $greyLight;
             }
         }
+    }
+}
+
+
+/*------------------------NAVIGATION-----------------*/
+
+#nav {
+    background: $greyMedium;
+    .button {
+        color: white;
     }
 }
