--- a/src/style/components/theme.scss
+++ b/src/style/components/theme.scss
@@ -18,6 +18,7 @@
 /*--------------------------------FONTS--------------------------*/
 
 body {
+    background: #f4f4f4;
     font-family: $font;
     .dropdown-btn,
     .sign {
