ADD: Sort component

--- a/src/style/components/theme.scss
+++ b/src/style/components/theme.scss
@@ -64,3 +64,10 @@ header {
         color: white;
     }
 }
+
+#sort {
+    background: #fafafa;
+    div {
+        display: inline-block;
+    }
+}
