ADD: sort component

--- a/src/style/components/theme.scss
+++ b/src/style/components/theme.scss
@@ -55,6 +55,16 @@ header {
     }
 }
 
+#sort {
+    a {
+        color: #999999;
+    }
+    a:hover {
+        color: #333333;
+        background: #E0E0E0;
+    }
+}
+
 
 /*------------------------NAVIGATION-----------------*/
 
