--- a/src/style/components/layout.scss
+++ b/src/style/components/layout.scss
@@ -9,7 +9,8 @@
 
 /*----------------------------HEADER--------------------------------*/
 
-header {
+header,
+#sort {
     padding-top: 0.5rem;
     padding-bottom: 0.8rem;
 }
@@ -30,8 +31,7 @@ header {
 
 .dropdown-content {
     display: none;
-    width: 10rem;
-    padding: 1.5rem 0.5rem 0.5rem 0.5rem;
+    padding: 1rem 4rem 1rem 0.3rem;
     @include border-radius(0.5rem);
     @extend .absolute;
 }
@@ -43,6 +43,20 @@ header {
 
 .dropdown-content a {
     margin-top: 0.8rem;
+    text-align: left;
+}
+
+#sort {
+    text-align: center;
+}
+
+#sort {
+    .dropdown-content {
+        display: none;
+    }
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
 }
 
 
