--- a/src/style/components/layout.scss
+++ b/src/style/components/layout.scss
@@ -100,3 +100,15 @@ header,
 .button:first-child {
     margin-left: 1rem
 }
+
+
+/*--------------------CONTENTS------------------*/
+
+#contents {
+    //margin: 0 auto;
+    width: 80%;
+    .content {
+        background: #ffffff;
+        margin: 1rem;
+    }
+}
