--- a/src/style/components/layout.scss
+++ b/src/style/components/layout.scss
@@ -105,10 +105,18 @@ header,
 /*--------------------CONTENTS------------------*/
 
 #contents {
-    //margin: 0 auto;
+    margin: 0 auto;
     width: 80%;
     .content {
         background: #ffffff;
         margin: 1rem;
+        .box {
+            display: none;
+            position: absolute;
+            background-color: rgba(255, 255, 255, 0.8);
+        }
+    }
+    .content:hover .box {
+        display: block;
     }
 }
