--- a/src/style/components/layout.scss
+++ b/src/style/components/layout.scss
@@ -114,9 +114,23 @@ header,
         .box {
             display: none;
             position: absolute;
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgba(255, 255, 255, 0.9);
             color: $greyMedium;
             font-size: 0.9rem;
+            width: 13rem;
+            height: 9.5rem;
+            .title {
+                margin-top: 0.5rem;
+                margin-left: 0.5rem;
+            }
+            .description {
+                margin: 0.5rem;
+                height: 3.5rem;
+                overflow: hidden;
+                color: $greyLight;
+                font-size: 0.7rem;
+                line-height: 1.3;
+            }
         }
         .count {
             margin-left: 8rem;
