--- a/src/style/components/theme.scss
+++ b/src/style/components/theme.scss
@@ -63,6 +63,9 @@ header {
         color: #333333;
         background: #E0E0E0;
     }
+    .dropdown-content {
+        background: #fafaf4;
+    }
 }
 
 
