--- a/src/style/components/layout.scss
+++ b/src/style/components/layout.scss
@@ -150,7 +150,7 @@ header,
 
 /*------------------------------------------*/
 
-#sign {
+#sign-out {
     text-align: center;
     margin-top: 2rem;
     button {
@@ -172,5 +172,46 @@ header,
     }
     div:hover {
         color: #0d47a1;
+    }
+}
+
+footer {
+    padding: 2rem;
+    line-height: 1.3;
+    margin-top: 1rem;
+    #dribble {
+        width: 20%;
+        p {
+            margin-bottom: 0.5rem;
+        }
+        p:first-child {
+            font-size: 1rem;
+        }
+    }
+    #list {
+        font-size: 0.8rem;
+        margin-left: 5rem;
+        table tr {
+            td {
+                padding-right: 2rem;
+                padding-bottom: 0.5rem;
+            }
+        }
+    }
+    #jobs {
+        margin-left: 25rem;
+        div {
+            margin-top: 0.5rem;
+            p:first-child {
+                color: #3a99da;
+            }
+            p:nth-child(2) {
+                font-size: 0.8rem;
+            }
+        }
+    }
+    #copyright {
+        margin-top: 1rem;
+        font-size: 0.8rem;
     }
 }
