--- a/src/style/components/theme.scss
+++ b/src/style/components/theme.scss
@@ -84,3 +84,9 @@ header {
         display: inline-block;
     }
 }
+
+footer {
+    background: #ffffff;
+    font-size: 0.9rem;
+    color: $greyLight;
+}
