--- a/src/style/components/layout.scss
+++ b/src/style/components/layout.scss
@@ -214,4 +214,25 @@ footer {
         margin-top: 1rem;
         font-size: 0.8rem;
     }
+    #social-network {
+        margin-top: 1.2rem;
+        img {
+            width: 1.5rem;
+            margin-right: 0.5rem;
+        }
+    }
+    #contact {
+        margin-left: 45rem;
+        img {
+            width: 5rem;
+        }
+        div {
+            margin-top: 1rem;
+            p:first-child {
+                font-size: 1.2rem;
+                font-weight: bold;
+                color: #333333;
+            }
+        }
+    }
 }
