--- a/src/style/components/layout.scss
+++ b/src/style/components/layout.scss
@@ -1,3 +1,5 @@
+/*---------------------------GLOBAL--------------------------------*/
+
 .inline-block {
     display: inline-block;
 }
@@ -93,7 +95,6 @@ header,
 .button {
     padding: 0.8rem 0.5rem 0.8rem;
     margin-right: 0.3rem;
-    font-size: 0.8rem;
     @include border-radius(0.4rem);
 }
 
@@ -108,15 +109,11 @@ header,
     margin: 0 auto;
     width: 80%;
     .content {
-        background: #ffffff;
         margin: 1rem;
         padding: 0.5rem;
         .box {
             display: none;
             position: absolute;
-            background-color: rgba(255, 255, 255, 0.9);
-            color: $greyMedium;
-            font-size: 0.9rem;
             width: 13rem;
             height: 9.5rem;
             .title {
@@ -127,8 +124,6 @@ header,
                 margin: 0.5rem;
                 height: 3.5rem;
                 overflow: hidden;
-                color: $greyLight;
-                font-size: 0.7rem;
                 line-height: 1.3;
             }
         }
@@ -137,8 +132,6 @@ header,
             p {
                 display: inline-block;
                 margin-right: 0.5rem;
-                font-size: 0.7rem;
-                color: $greyLight;
             }
         }
     }
@@ -148,18 +141,15 @@ header,
 }
 
 
-/*------------------------------------------*/
+/*------------------------SIGN OUT------------------------*/
 
 #sign-out {
     text-align: center;
     margin-top: 2rem;
     button {
-        background: $pink;
-        color: white;
         border: none;
         width: 35%;
         height: 10vh;
-        font-size: 0.9rem;
         @include border-radius(0.3rem);
     }
     button:hover {
@@ -167,13 +157,11 @@ header,
     }
     div {
         margin-top: 1rem;
-        color: #5c8bc0;
-        font-size: 0.9rem;
-    }
-    div:hover {
-        color: #0d47a1;
     }
 }
+
+
+/*---------------------------------FOOTER-----------------------*/
 
 footer {
     padding: 2rem;
@@ -184,12 +172,8 @@ footer {
         p {
             margin-bottom: 0.5rem;
         }
-        p:first-child {
-            font-size: 1rem;
-        }
     }
     #list {
-        font-size: 0.8rem;
         margin-left: 5rem;
         table tr {
             td {
@@ -202,17 +186,10 @@ footer {
         margin-left: 25rem;
         div {
             margin-top: 0.5rem;
-            p:first-child {
-                color: #3a99da;
-            }
-            p:nth-child(2) {
-                font-size: 0.8rem;
-            }
         }
     }
     #copyright {
         margin-top: 1rem;
-        font-size: 0.8rem;
     }
     #social-network {
         margin-top: 1.2rem;
@@ -228,11 +205,6 @@ footer {
         }
         div {
             margin-top: 1rem;
-            p:first-child {
-                font-size: 1.2rem;
-                font-weight: bold;
-                color: #333333;
-            }
         }
     }
 }
