--- a/src/style/components/theme.scss
+++ b/src/style/components/theme.scss
@@ -105,7 +105,7 @@ footer {
     .content {
         background: #ffffff;
         .box {
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color: $opacityWhite;
             color: $greyMedium;
             font-size: 0.9rem;
             .description {
@@ -113,9 +113,14 @@ footer {
                 font-size: 0.7rem;
             }
         }
-        .count p {
-            font-size: 0.7rem;
-            color: $greyLight;
+        .count {
+            img {
+                @include contrast(1%);
+            }
+            p {
+                font-size: 0.7rem;
+                color: $greyLight;
+            }
         }
     }
 }
