--- a/src/style/import/_variables.scss
+++ b/src/style/import/_variables.scss
@@ -9,3 +9,4 @@ $greyWhite: #E0E0E0;
 $white: white;
 $pink: #ec5e95;
 $opacityGrey: rgba(51, 51, 51, 0.95);
+$opacityWhite: rgba(255, 255, 255, 0.9);
