--- a/src/style/components/theme.scss
+++ b/src/style/components/theme.scss
@@ -60,8 +60,11 @@ header {
         color: #999999;
     }
     a:hover {
-        color: #333333;
+        color: $greyDark;
         background: #E0E0E0;
+    }
+    .dropdown-btn {
+        color: $greyMedium;
     }
     .dropdown-content {
         background: #fafaf4;
@@ -176,7 +179,7 @@ footer {
             p:first-child {
                 font-size: 1.2rem;
                 font-weight: bold;
-                color: #333333;
+                color: $greyDark;
             }
         }
     }
