--- a/src/style/components/theme.scss
+++ b/src/style/components/theme.scss
@@ -14,6 +14,9 @@
     background: $greyLight;
 }
 
+.test {
+    color: blue;
+}
 
 /*--------------------------------BODY--------------------------*/
 
